welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:7: error: Unmatched closing brace '}' ignored here
		else{return Math.max(a,b)}}
                                          ^max1020:8: error: ';' expected but 'else' found.
	else{
        ^